@@ -221,7 +221,10 @@ server.  This address is printed out as part of the response to the
 
 [lst_item [var ::ftpd::port]]
 
-The port that the ftp server should listen on.
+The port that the ftp server should listen on. 
+If port is specified as zero, the operating system will allocate an 
+unused port for use as a server socket; afterwards, the variable will 
+contain the port number that was allocated.
 
 [lst_item [var ::ftpd::welcome]]
 
